# frkl.project-meta

./: .cruft.json  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.rst  LICENSE  LICENSE.PARITY  LICENSE.PROSPERITY  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.frkl/: project.json  pyinstaller-args.json
.github/: workflows
.github/workflows/: build-linux.yaml  build-mac-osx.yaml
api-documentation/: index.html
ci/docker/: Dockerfile
ci/docs/: __init__.py
ci/github/workflows/: build-mac-osx.yaml
ci/gitlab/release/: binaries.yml  container.yml
ci/gitlab/test/: commitlint.yml  coverage.yml  flake8.yml  mypy.yml  safety.yml  tox.yml
docs/: install.md  usage.md
install/: index.html
scripts/attribution/: create_attribution_data.sh
scripts/build-binary/: build.sh  onefile.spec
scripts/install/: project-meta.sh
search/: search_index.json
src/frkl/: __init__.py
src/frkl/project_meta/: __init__.py  core.py  defaults.py  pyinstaller.py  utils.py
src/frkl/project_meta/_frkl/: __init__.py  _frkl.json
src/frkl/project_meta/documentation/: mkdocs_macros_frkl.py
src/frkl/project_meta/interfaces/cli/: __init__.py
src/frkl/project_meta/resources/: entry_point.py.j2
tests/: conftest.py  test_frkl_project_meta.py
usage/: index.html
