[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
    "wheel",
]
build-backend = 'setuptools.build_meta'

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | external
)/
'''

[tool.portray]
output_dir = "site"
modules = [
"frkl_project_meta",
]
extra_markdown_extensions = [
  "attr_list"
]
include_reference_documentation = false
[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "blue grey", accent = "pink"}


[tool.portray.mkdocs]
repo_url = "https://gitlab.com/frkl/frkl_project_meta"
repo_name = "frkl_project_meta"
plugins = [
  "search",
  "macros"
]

[tool.dephell.main]
from = {format = "setuppy", path = "setup.py"}
